css/styles.css
/* ... */
h3 {
    font-size: 3rem;
}

p {
    margin-top: 0;
}
/* Desktop and Laptop: 1024px is breakpoint used by many framework like bootstrap 
for laptop and desktop screens. */
@media screen and (min-width: 1024px) {
    body {
        font-size: 1.8rem;
    }

    h1{
        font-size: 8rem;
    }

    h2 {
        font-size: 4rem;
    }

    h3 {
        font-size: 2.4rem;
    }
}

/* ********** Links ********** */
a {
    text-decoration: none;
}

.link-arrow {
    color: var(--color-accent);
    text-transform: uppercase;
    font-size: 2rem;
    font-weight: bold;
}

.link-arrow::after {
    content: '-->';
    margin-left: 5px;
    transition: margin 0.15s;

}

.link-arrow:hover::after {
    margin-left: 10px;
}

/* We define media queries for each section, diviser pour regner; ça évite
d'avoir un media query que l'on va venir updater à chaque fois que l'on
modifie une section 

Also we don't wanna have a single place for defining the breakpoints 
because these breakpoins really depends on the component we are designing
Peut etre que pour certains component on voudra bien changer
le breakpoint pour être plus responsive*/

@media screen and (min-width: 1024px) {
    .link-arrow {
        font-size: 1.5rem;
    }
    
}

/* ********** Badges ********** */
/* 2nd principle of object oriented CSS: We should seperate structure from skin 
    So we gonna define 2 differents class
    - 1 class to give the basic structure in terms of padding and font-size
    - other class to give the element different skin: color and sizes 
*/
.badge {
    border-radius: 20px;
    font-size: 2rem;
    font-weight: 600;
    padding: 0.5rem 2rem;
    white-space: nowrap;
}

/* We use here the BEM naming convention: Modifier that changes the style of the block */
.badge--primary {
    background: var(--color-primary);
    color: white;
}

.badge--secondary {
    background: var(--color-secondary);
    color: white;
}

.badge--small {
    font-size: 1.6rem;
    padding: 0.5rem 1.5rem;
}

@media screen and (min-width: 1024px) {
    .badge {
        font-size: 1.5rem;
    }

    .badge--small {
        font-size: 1.2rem;
    }
}

/* ********** Lists *********** */
.list {
    list-style: none; /* Get rid of the default bullet point  */
    padding-left: 0;/* Get rid of the padding apply by browser by default */
}

/* We have to distinguish inline list and vertical list which the used by default for the previous one */
.list--inline .list__item{
    display: inline-block;
    margin-right: 2rem;
}

.list--tick {
    list-style-image: url(../images/tick.svg);
    padding-left: 2rem;
    margin-bottom: 1rem;
    color: var(--color-headings); /* Comme les list n'héritent pas l'attribut color du body on va set nous memes */
}

.list--tick .list__item {
    padding-left: 0.5rem;
    margin-bottom: 1rem;
}

@media screen and (min-width: 1024px) {
    .list--tick .list__item {
        padding-left: 0;
    }
    
}

/* ********** Icons ********** */
.icon {
    width: 40px;
    height: 40px;
}

.icon--small {
    width: 30px;
    height: 30px;
}

.icon--primary {
    fill: var(--color-primary); /* Only apply to svg element */
}

.icon--white {
    fill: white;
}

.icon-container {
    background: #f3f9fa;
    width: 64px;
    height: 64px;
    border-radius: 100%;
    display: inline-flex;
    justify-content: center;
    align-items: center;
}

.icon-container--accent {
    background: var(--color-accent);
}

/* ********** Buttons ********** */
/* We define a button without a skin only the structure */
.btn {
    border-radius: 40px;
    border: 0;
    cursor: pointer;
    font-size: 1.8rem;
    font-weight: 600;
    margin: 1rem 0;
    outline: 0;
    padding: 2rem 3rem;
    text-align: center;
    text-transform: uppercase;
    white-space: nowrap;
}

/* If we have an icon inside a btn element size the icon this way */
.btn .icon {
    width: 2rem;
    height: 2rem;
    margin-right: 1rem;
    vertical-align: middle; /* To set the icon to the middle of the btn  */
}
/* Here we define the skin classes  */
.btn--primary {
    background: var(--color-primary);
    color: white;
}

.btn--primary:hover {
    background: #3a8ffd; /* On the color palette, tu prends la couleur de base tu translate vers les blanc pour avoir a lighter blue */
}

.btn--secondary {
    background: var(--color-secondary);
    color: white;
}

.btn--secondary:hover {
    background: #00c8eb;
}

.btn--accent {
    background: var(--color-accent); 
    color: white; 
}

.btn--accent:hover {
    background: #ec3000;
}

.btn--stretch {
    padding-left: 6rem;
    padding-right: 6rem;
}

/* Un boutton qui va occuper tout l'espace horizontale disponible */
.btn--block {
    width: 100%;
    display: inline-block;
}

.btn--outline {
    background: white;
    color: var(--color-headings);
    border: 2px solid var(--color-headings);
}

.btn--outline:hover {
    background: var(--color-headings);
    color:white;
}

@media screen and (min-width : 1024px) {
    .btn {
        font-size: 1.5rem;
    }
}

/* ********** Inputs *********** */
.input {
    padding: 1.5rem 3.5rem;
    border: 1px solid var(--color-border);
    border-radius: var(--border-radius);
    outline: 0;
    font-size: 2rem;
    color: var(--color-headings); 
}

/* For modifying the placeholder */
::placeholder {
    color: #cdcbd7;
}

.input-group {
    border: 1px solid var(--color-border);
    border-radius: var(--border-radius);
    display: flex; /* We want the input item to grow and take the entire available space in the container div */
}

/* We use nesting here to target the input inside the div */
.input-group .input {
    border: 0;
    flex-grow: 1;
    padding: 1.5rem 2rem;
}

.input-group .btn {
    margin: 4px;
}

@media screen and (min-width: 1024px) {
    .input {
        font-size: 1.5rem;
    }
}
/* ... */

